test/error/test4.pl0
PROGRAM test4
CONST x:=1;
VAR y;
BEGIN
    y:=2;
    x:=y
END